--- a/ClothesShop/css/style.css
+++ b/ClothesShop/css/style.css
@@ -18,6 +18,52 @@ a:link,a:visited{
     font-size: 16px;
 }
 
+#content{
+    width: 980px;
+    margin:0 auto;
+}
+
+h2{
+    width: 259px;
+    height: 45px;
+    background: #ea6c46;
+    font-size: 20px;
+    font-weight: 100;
+    line-height: 45px;
+    text-align: center;
+    color: #fff;
+    margin-top: 80px;
+}
+
+.current{
+    width: 958px;
+    height: 342px;
+    background: #fff;
+    border:1px solid #dcd2ba;
+    padding:13px 0 0 20px;
+}
+
+.current dl{
+    width: 229px;
+    height:330px;
+    border:1px solid #dcd2ba;
+    float: left;
+    margin-right: 5px;
+}
+
+.current dt{
+    width:229px;
+    height:211px;
+    border-bottom: 1px solid #dcd2ba;
+}
+
+.match_1{
+    background: url("../images/match01.jpg") center center no-repeat;
+}
+/*这里的相对路径是根据css文件的路径来定的*/
+
+
+
 #footer{
     width: 100%;
     height: 103px;
