--- a/Travelling/css/RegisterSecond.css
+++ b/Travelling/css/RegisterSecond.css
@@ -39,39 +39,40 @@ td {
     padding: 18px;
 }
 
-.chose {
-    margin: 0px 15px;
-}
-
-.text {
+.select{
     height: 20px;
     width: 220px;
-    padding: 5px 8px;
-}
-
-input {
     vertical-align: middle;
-    background: #fff url("../images/attention.png") no-repeat 98% center;
     border: 1px solid #aaa;
     box-shadow: 0px 0px 3px #ccc, 0 10px 15px #eee inset;
     border-radius: 2px;
     transition: padding .25s;
 }
 
-input:focus {
+textarea {
+    padding: 8px;
+    width: 300px;
+    background: #fff url(../images/attention.png) no-repeat 98% center;
+    border: 1px solid #aaa;
+    box-shadow: 0px 0px 3px #ccc, 0 10px 15px #eee inset;
+    border-radius: 2px;
+    transition: padding .25s;
+}
+
+textarea:focus {
     background: #fff;
-    border: 1px solid #555;
+    border:1px solid #555;
     box-shadow: 0 0 3px #aaa;
-    padding-right: 70px;
+    padding-right:70px;
 }
 
-input:focus:invalid {
+textarea:focus:invalid {
     background: #fff url(../images/warn.png) no-repeat 98% center;
-    border-color: #b03535;
     box-shadow: 0 0 5px #d45252;
+    border-color: #b03535
 }
 
-input:required:valid {
+textarea:required:valid {
     background: #fff url(../images/right.png) no-repeat 98% center;
     box-shadow: 0 0 5px #5cd053;
     border-color: #28921f;
@@ -97,4 +98,3 @@ button:active {
     border: 1px solid #20911e;
     box-shadow: 0 0 10px 5px #356b0b inset;
 }
-
