--- a/旅游风景网/css/header.css
+++ b/旅游风景网/css/header.css
@@ -5,11 +5,12 @@
 }
 
 .header {
+    font-weight: bold;
     position: fixed;
     z-index: 100;
     width: 100%;
     height: 58px;
-    background-color: #005c30;
+    /*background-color: #005c30;*/
     /*opacity:0.9;*/
 }
 
