--- a/旅游风景网/css/footer.css
+++ b/旅游风景网/css/footer.css
@@ -84,3 +84,12 @@ a:hover {
     margin-left: 30px;
 }
 
+#weibo-pop {
+    display: none;
+    width: 100px;
+    height: 100px;
+    position: relative;
+    z-index: 2;
+    top: 40px;
+    right: 30px;
+}
