--- a/旅游风景网/css/detailFirst.css
+++ b/旅游风景网/css/detailFirst.css
@@ -7,18 +7,57 @@
     list-style: none;
 }
 
-/*body {*/
-    /*height: 100%;*/
-/*}*/
-
 #img1 {
     width: 100%;
-    height: 300px;
-    background: url("../images/BannerFirst.jpeg") fixed;
+    height: 670px;
+    background: url("../images/BannerFirst.jpeg") fixed center;
 }
 
 #img2 {
     width: 100%;
-    height: 300px;
-    background: url("../images/BannerThird.jpeg") fixed;
+    height: 670px;
+    background: url("../images/BannerThird.jpeg") fixed center;
 }
+
+#img3 {
+    width: 100%;
+    height: 670px;
+    background: url("../images/BannerSecond.jpeg") fixed center;
+}
+
+.diary {
+    width: 100%;
+    height: 330px;
+    padding: 100px 0px;
+}
+
+#content {
+    font-family: "Work Sans", Arial, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.7;
+    color: #7f7f7f;
+}
+
+#content h2 {
+    position: relative;
+    left: 10%;
+    color: #000;
+    font-family: "Work Sans", Arial, sans-serif;
+    font-weight: 300;
+    margin: 0 0 30px 0;
+}
+
+#left-content {
+    float: left;
+    width: 50%;
+    text-indent: 10%;
+}
+
+#right-content {
+    float: left;
+    width: 50%;
+    text-indent: 10%;
+}
+
+
