--- a/旅游风景网/css/detailFirst.css
+++ b/旅游风景网/css/detailFirst.css
@@ -15,14 +15,46 @@
 
 #img2 {
     width: 100%;
-    height: 670px;
+    height: 450px;
     background: url("../images/BannerThird.jpeg") fixed center;
 }
 
 #img3 {
     width: 100%;
-    height: 670px;
+    height: 450px;
     background: url("../images/BannerSecond.jpeg") fixed center;
+}
+
+#scenery-introduction {
+    float: left;
+    width: 40%;
+    padding-left: 10%;
+}
+
+#scenery-introduction h2 {
+    color: #000;
+    font-family: "Work Sans", Arial, sans-serif;
+    margin: 0 0 30px 0;
+    font-size: 30px;
+}
+
+#scenery-introduction p {
+    font-family: "Work Sans", Arial, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.7;
+    color: #7f7f7f;
+}
+
+#scenery-img {
+    float: left;
+    width: 40%;
+    padding-left: 5%;
+}
+
+#scenery-img img {
+    height: 330px;
+    width: 100%;
 }
 
 .diary {
@@ -45,7 +77,6 @@
     left: 10%;
     color: #000;
     font-family: "Work Sans", Arial, sans-serif;
-    font-weight: 300;
     margin: 0 0 30px 0;
 }
 
