--- a/旅游风景网/css/detailFirst.css
+++ b/旅游风景网/css/detailFirst.css
@@ -25,6 +25,52 @@
     background: url("../images/BannerSecond.jpeg") fixed center;
 }
 
+#author-img {
+    padding-top: 50px;
+    float: left;
+    width: 35%;
+    padding-left: 15%;
+}
+
+#author-img img {
+    width: 180px;
+    height: 180px;
+    border-radius: 180px;
+    border: 1px solid #bbb;
+}
+
+#author-img h2 {
+    color: #000;
+    font-family: "Work Sans", Arial, sans-serif;
+    margin: 0 0 30px 0;
+    font-size: 30px;
+}
+
+#author-img h2 {
+    margin-top: 30px;
+}
+
+#author-introduction {
+    float: left;
+    width: 40%;
+    padding-right: 10%;
+}
+
+#author-introduction h2 {
+    color: #000;
+    font-family: "Work Sans", Arial, sans-serif;
+    margin: 0 0 30px 0;
+    font-size: 30px;
+}
+
+#author-introduction p {
+    font-family: "Work Sans", Arial, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.7;
+    color: #7f7f7f;
+}
+
 #scenery-introduction {
     float: left;
     width: 40%;
