--- a/旅游风景网/css/detailFirst.css
+++ b/旅游风景网/css/detailFirst.css
@@ -53,12 +53,8 @@
 #author-img h2 {
     color: #000;
     font-family: "Work Sans", Arial, sans-serif;
-    margin: 0 0 30px 0;
+    margin: 30px 0;
     font-size: 30px;
-}
-
-#author-img h2 {
-    margin-top: 30px;
 }
 
 #author-introduction {
