--- a/旅游风景网/css/index.css
+++ b/旅游风景网/css/index.css
@@ -46,3 +46,35 @@
     font-weight: 200;
 }
 
+#music-box {
+    width: 100%;
+    height: 500px;
+    padding: 100px 0px;
+}
+
+#music-left {
+    float: left;
+    width: 40%;
+    padding-left: 10%;
+}
+
+#music-left h2 {
+    color: #000;
+    font-family: "Work Sans", Arial, sans-serif;
+    margin: 0 0 30px 0;
+    font-size: 30px;
+}
+
+#music-left p {
+    font-family: "Work Sans", Arial, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.7;
+    color: #7f7f7f;
+}
+
+#music-right {
+    float: left;
+    width: 50%;
+    height: 300px;
+}
