--- a/旅游风景网/css/audio.css
+++ b/旅游风景网/css/audio.css
@@ -14,7 +14,8 @@
 #player {
     width: 300px;
     height: 300px;
-    background: #fff;
+    background: #f2f4f7;
+    /*background: #fff;*/
     overflow: hidden;
     z-index: 300;
 }
