--- a/旅游风景网/css/detailFirst.css
+++ b/旅游风景网/css/detailFirst.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 * {
-    margin: 0px;
-    border: 0px;
+    margin: 0;
+    border: 0;
     background: none;
     list-style: none;
 }
@@ -16,10 +16,12 @@
 
 .text-center {
     color: #fff;
-    font-size: 70px;
-    font-weight: 300;
     position: relative;
     top: 30%;
+    font-size: 4em;
+    letter-spacing: 2px;
+    font-weight: 600;
+    text-shadow: 1px 4px 11px rgb(113, 111, 111);
 }
 
 #img2 {
@@ -113,7 +115,7 @@
 .diary {
     width: 100%;
     height: 330px;
-    padding: 100px 0px;
+    padding: 100px 0;
 }
 
 #content {
