--- a/旅游风景网/css/index.css
+++ b/旅游风景网/css/index.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
 
 * {
-    margin: 0px;
-    border: 0px;
+    margin: 0;
+    border: 0;
     background: none;
     list-style: none;
 }
+
 
 #albums {
     float: left;
@@ -49,7 +50,7 @@
 #music-box {
     width: 100%;
     height: 500px;
-    padding: 100px 0px;
+    padding: 100px 0;
 }
 
 #music-left {
@@ -78,3 +79,77 @@
     width: 50%;
     height: 300px;
 }
+
+#about {
+    float: left;
+    width: 100%;
+    height: 450px;
+}
+
+#about-left {
+    float: left;
+    width: 50%;
+    padding-left: 5%;
+}
+#about-left h2 {
+    margin-top: 10%;
+    color: #fff;
+    font-size: 4em;
+    letter-spacing: 2px;
+    font-weight: 600;
+    text-shadow: 1px 4px 11px rgb(113, 111, 111);
+}
+
+#about-left p {
+    margin-top: 45px;
+    font-family: "Work Sans", Arial, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.7;
+    color: #7f7f7f;
+}
+
+.background {
+    background: #f2f4f7;
+}
+
+#right-span {
+    color: #42efae;
+}
+
+#about-right {
+    float: left;
+    width: 40%;
+}
+
+#about-right {
+    position: relative;
+    top: 35%;
+    left: 5%;
+    font-family: "Work Sans", Arial, sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.7;
+    color: #7f7f7f;
+}
+
+#about-right div {
+    border-radius: 3px;
+    margin-top: 30px;
+    line-height: 45px;
+    text-align: center;
+    width: 135px;
+    height: 45px;
+    background:  #38B774;
+    opacity: 0.82;
+}
+
+#about-right div:hover {
+    background:  orange;
+}
+
+#about-right div a {
+     color: #fff;
+     font-size: 1em;
+    font-weight: 500;
+ }
