alter with new style in register page

--- a/旅游风景网/css/RegisterFirst.css
+++ b/旅游风景网/css/RegisterFirst.css
@@ -15,6 +15,7 @@ body {
     font-family: "微软雅黑";
     font-size: 14px;
     font-weight: bold;
+    background: #f2f4f7;
 }
 
 #banner {
@@ -27,20 +28,15 @@ body {
 }
 
 #content {
-    width: 980px;
-    margin: 0px auto;
-}
-
-.left {
-    margin-left: 300px;
+    background: #fff;
+    border-radius: 5px;
+    margin: 80px auto;
+    width: 500px;
+    padding: 60px;
 }
 
 td {
     padding: 18px;
-}
-
-.chose {
-    margin: 0px 15px;
 }
 
 .text {
@@ -78,8 +74,8 @@ input:required:valid {
 }
 
 button {
+    margin-left: 180px;
     padding: 8px 15px;
-    margin-left: 450px;
     background: #68b12f;
     border: 1px solid #509111;
     border-radius: 3px;
@@ -93,5 +89,8 @@ button:hover {
     cursor: pointer;
 }
 
+.chose {
+    margin-left: 10px;
+}
 
 
