--- a/旅游风景网/css/RegisterFirst.css
+++ b/旅游风景网/css/RegisterFirst.css
@@ -16,23 +16,16 @@ body {
     font-size: 14px;
     font-weight: bold;
     background: #f2f4f7;
-}
-
-#banner {
-    width: 100%;
-    margin: 0 auto;
-}
-
-#banner img{
-    width: 100%;
+    background: url("../images/BannerThird.jpeg") no-repeat;
 }
 
 #content {
     background: #fff;
     border-radius: 5px;
-    margin: 80px auto;
+    margin:50px auto;
     width: 500px;
-    padding: 60px;
+    padding: 60px 60px 0 60px;
+    opacity: 0.9;
 }
 
 td {
