--- a/旅游风景网/css/RegisterSecond.css
+++ b/旅游风景网/css/RegisterSecond.css
@@ -15,24 +15,17 @@ body {
     font-family: "微软雅黑";
     font-size: 14px;
     font-weight: bold;
-    background: #f2f4f7;
+    background: url("../images/BannerFirst.jpeg") no-repeat;
 }
 
-#banner {
-    width: 100%;
-    margin: 0 auto;
-}
-
-#banner img{
-    width: 100%;
-}
 
 #content {
     background: #fff;
     border-radius: 5px;
-    margin: 80px auto;
+    margin: 60px auto;
     width: 500px;
     padding: 60px;
+    opacity: 0.9;
 }
 
 
