--- a/旅游风景网/css/RegisterFirst.css
+++ b/旅游风景网/css/RegisterFirst.css
@@ -16,10 +16,12 @@ body {
     font-size: 14px;
     font-weight: bold;
     background: #f2f4f7;
-    background: url("../images/BannerThird.jpeg") no-repeat;
+    background: url("../images/BannerThird.jpeg") top center no-repeat; background-size:cover;
+    /*background-size: 100% 100%;*/
 }
 
 #content {
+    /*clear: left;*/
     background: #fff;
     border-radius: 5px;
     margin:50px auto;
