--- a/旅游风景网/css/login.css
+++ b/旅游风景网/css/login.css
@@ -12,7 +12,7 @@
 }
 
 body{
-    background: #f2f4f7;
+    background: url("../images/BannerThird.jpeg") top center no-repeat; background-size:cover;
 }
 
 #outer{
@@ -21,6 +21,7 @@ body{
     margin: 0px auto;
     width: 328px;
     padding: 80px;
+    opacity: 0.9;
 }
 
 .font{
@@ -135,4 +136,5 @@ label:before {
     width: 100%;
     height: 100px;
     background: #f2f4f7;
+    opacity: 0;
 }
