--- a/旅游风景网/css/RegisterFirst.css
+++ b/旅游风景网/css/RegisterFirst.css
@@ -17,14 +17,12 @@ body {
     font-weight: bold;
     background: #f2f4f7;
     background: url("../images/BannerThird.jpeg") top center no-repeat; background-size:cover;
-    /*background-size: 100% 100%;*/
 }
 
 #content {
-    /*clear: left;*/
     background: #fff;
     border-radius: 5px;
-    margin:50px auto;
+    margin: 0 auto 50px;
     width: 500px;
     padding: 60px 60px 0 60px;
     opacity: 0.9;
@@ -86,6 +84,13 @@ button:hover {
 
 .chose {
     margin-left: 10px;
+}
+
+#blank {
+    width: 100%;
+    height: 100px;
+    background: #f2f4f7;
+    opacity: 0;
 }
 
 
