--- a/旅游风景网/css/RegisterSecond.css
+++ b/旅游风景网/css/RegisterSecond.css
@@ -23,7 +23,7 @@ body {
     clear: left;
     background: #fff;
     border-radius: 5px;
-    margin: 60px auto;
+    margin: 0 auto 60px;
     width: 500px;
     padding: 60px;
     opacity: 0.9;
@@ -92,4 +92,11 @@ button:hover {
 button:active {
     border: 1px solid #20911e;
     box-shadow: 0 0 10px 5px #356b0b inset;
+}
+
+#blank {
+    width: 100%;
+    height: 100px;
+    background: #f2f4f7;
+    opacity: 0;
 }
