--- a/旅游风景网/css/RegisterThird.css
+++ b/旅游风景网/css/RegisterThird.css
@@ -11,17 +11,52 @@
     outline: none;
 }
 
+a {
+    text-decoration: none;
+}
+
 body {
     font-family: "微软雅黑";
     font-size: 14px;
     font-weight: bold;
+    background: url("../images/BannerFirst.jpeg")  top center no-repeat; background-size:cover;;
 }
 
-#banner {
+#blank {
     width: 100%;
-    margin: 0 auto;
+    height: 100px;
+    background: #f2f4f7;
+    opacity: 0;
 }
 
-#banner img{
-    width: 100%;
+#content {
+    clear: left;
+    background: #fff;
+    border-radius: 5px;
+    margin: 0 auto 60px;
+    width: 500px;
+    height: 300px;
+    padding: 60px;
+    opacity: 0.9;
+}
+
+#back {
+    border-radius: 3px;
+    margin-top: 30px;
+    line-height: 45px;
+    text-align: center;
+    width: 135px;
+    height: 45px;
+    background:  #38B774;
+    opacity: 0.82;
+}
+
+#back:hover {
+    background:  orange;
+}
+
+#back a {
+    color: #fff;
+    font-size: 1em;
+    font-weight: 500;
 }
