--- a/旅游风景网/css/index.css
+++ b/旅游风景网/css/index.css
@@ -151,5 +151,12 @@
 #about-right div a {
      color: #fff;
      font-size: 1em;
-    font-weight: 500;
+     font-weight: 500;
  }
+
+#footer-style {
+    float: left;
+    width: 100%;
+    height: 60px;
+    background: url("../images/footer-bg.PNG") center;
+}
