using gif as a bannner

--- a/旅游风景网/css/index.css
+++ b/旅游风景网/css/index.css
@@ -7,7 +7,6 @@
     list-style: none;
 }
 
-
 #albums {
     float: left;
 }
@@ -158,5 +157,5 @@
     float: left;
     width: 100%;
     height: 60px;
-    background: url("../images/footer-bg.PNG") center;
+    background: url("../images/footer-bg.PNG") #f2f4f7 center;
 }
