--- a/旅游风景网/css/RegisterThird.css
+++ b/旅游风景网/css/RegisterThird.css
@@ -40,8 +40,15 @@ body {
     opacity: 0.9;
 }
 
+#content h1 {
+    text-align: center;
+}
+
 #back {
+    position: relative;
+    left: 35%;
     border-radius: 3px;
+    top: 40%;
     margin-top: 30px;
     line-height: 45px;
     text-align: center;
@@ -59,4 +66,24 @@ body {
     color: #fff;
     font-size: 1em;
     font-weight: 500;
+}
+
+#info {
+    position: relative;
+    top: 25%;
+}
+
+#info img {
+    position: relative;
+    left: 30%;
+    display: inline;
+    margin-right: 10px;
+}
+
+#info h2 {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    margin-left: 10px;
+    display: inline;
 }
