--- a/旅游风景网/css/index.css
+++ b/旅游风景网/css/index.css
@@ -9,6 +9,7 @@
 
 #albums {
     float: left;
+    width: 100%;
 }
 
 .row{
@@ -158,4 +159,41 @@
     width: 100%;
     height: 60px;
     background: url("../images/footer-bg.PNG") #f2f4f7 center;
+}
+
+#img1 {
+    float: left;
+    text-align: center;
+    width: 100%;
+    height: 370px;
+    background: url("../images/BannerFirst.jpeg") fixed center no-repeat;
+}
+
+#img2 {
+    float: left;
+    text-align: center;
+    width: 100%;
+    height: 450px;
+    background: url("../images/BannerThird.jpeg") fixed center;
+}
+
+#img3 {
+    float: left;
+    text-align: center;
+    width: 100%;
+    height: 450px;
+    background: url("../images/BannerSecond.jpeg") fixed center;
+}
+
+#img4 {
+    float: left;
+    text-align: center;
+    width: 100%;
+    height: 370px;
+    background: url("../images/BannerFirst.jpeg") fixed center no-repeat;
+}
+
+.in-images {
+    width: 100%;
+    height: 100%;
 }
